# yav

./: .ci.yml  .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh
.github/workflows/: ci.yml
cmake/: yavoConfig.cmake.in
example/: ATTRIBUTION.md
src/core/: color.cpp  color.hpp  config.hpp  drm.cpp  drm.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  interrupt.cpp  interrupt.hpp  logger.hpp  screen.cpp  screen.hpp  viewport.cpp  viewport.hpp
src/view/: main.cpp  test.cpp
